Layout changes to projects, releases and forms

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "bootstrap/jumbotron";
 @import "bootstrap/panel";
 @import "bootstrap/thumbnails";
+@import "bootstrap/buttons";
 
 // APP
 @import "base";
