--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -47,7 +47,7 @@
     <div class="col-md-12">
       <h4><strong>Report Content</strong></h4>
       <hr/>
-      <p class="lead text-justify"><%= truncate(@report.content, length: 500, omission: " ...Read more") %></p>
+      <p class="lead text-justify"><%= @report.content %></p>
     </div>
   </div>
   <br>
