--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -11,35 +11,30 @@
     <hr/>
     <div class="col-md-4 col-md-offset-4 text-center">
       <p>Leaderboard Time Interval</p>
-      <%= form_tag '/leaderboard', :id => "timeForm" do %>
-        <%= select_tag :interval, options_for_select(["All Time", "Last Month"]), class: 'form-control' %>
+      <%= form_tag '/leaderboard', :id => "timeForm", remote: :true, method: :get do %>
+        <%= select_tag(:interval,
+                      options_for_select(
+                      [
+                        ['All Time', :alltime],
+                        ['Last Month', :monthly]
+                      ]),
+                      class: 'form-control') %>
       <% end %>
     </div>
   </div>
   <br>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <table class="table table-hover">
-        <thead>
-          <th>Rank</th>
-          <th>Player Name</th>
-          <th>Points</th>
-        </thead>
-        <% @leaderboard.each_with_index do |player, n| %>
-          <tr>
-            <td><%= n + 1 %></td>
-            <td><%= player[:user].email %></td>
-            <td><%= player[:count] %></td>
-          </tr>
-        <% end %>
-      </table>
+      <%= render 'leaderboard_table' %>
     </div>
   </div>
 </div>
 
 <script type="text/javascript">
   $(document).ready(function() {
-      $('#interval').change();
+    $('#interval').change(function () {
+      $('#timeForm').submit();
+    });
   });
 </script>
 
