--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -60,6 +60,9 @@
       <% @comments.each do |comment| %>
         <ul class="list-group-item"><strong><%= comment.user.email %></strong>
           <li class="list-group-item"><p><%= comment.text %></p></li>
+          <% if comment.attachment? %>
+            <li class="list-group-item"><p><%= image_tag comment.attachment.url(:thumb) %></p></li>
+          <% end %>
         </ul>
         <% end %>
       </div>
