--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -73,9 +73,9 @@
 }
 
 .projects-section {
-  // background-color: rgba(236, 240, 241, 1);
+  padding-bottom: 50px;
 
- .popular-projects {
+  .popular-projects {
     .thumbnail {
       border: none;
       background: none;
