--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,4 +56,13 @@
   <%= render 'shared/messages' %>
 
   <%= yield %>
+
+  <br/>
+
+  <footer class="footer">
+    <div class="container">
+      <p class="text-muted">Bug Catcher ...</p>
+    </div>
+  </footer>
+
 </html>
