--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -79,14 +79,17 @@
             <h3 class="panel-title">For Developers</h3>
           </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body text-center">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            cillum dolore eu fugiat nulla pariatur.
+          </p>
+
+          <p>
+            <%= link_to "Sign-up and add your project", new_user_registration_path %>
           </p>
         </div>
       </div>
@@ -99,14 +102,17 @@
             <h3 class="panel-title">For Testers</h3>
           </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body text-center">
           <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur.
+          </p>
+
+          <p>
+            <%= link_to "Sign-up and add start testing", new_user_registration_path %>
           </p>
         </div>
       </div>
@@ -135,6 +141,14 @@
           </div>
         </div>
       <% end %>
+
+      <div class="col-sm-12">
+        <hr/>
+
+        <p class="text-center">
+          <%= link_to "See all projects...", projects_path %>
+        </p>
+      </div>
 
     </div>
   </div>
