UI tweaks to report show page

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,7 +20,7 @@
 
     <div class="col-md-8">
       <div class="pull-right">
-        <%= link_to "< Back to All Projects", projects_url %>
+        <%= link_to "Back to All Projects", projects_url %>
       </div>
       <h3 style="margin-top: 0;"><%= truncate(@project.name, length: 60) %></h3>
       <hr/>
