--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-3 col-md-offset-1 project-screenshots">
       <div class="pull-right">
-        <%= link_to "< Back to Project", @project %>
+        <%= link_to "Back to Project", @project %>
       </div>
       <% if @screenshots.present? %>
         <div class="col-md-12">
