--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,8 @@
-<%= form_for [@report, comment], remote: true do |f| %>
-  <h4>Add new comment</h4>
-
-  <div class="field">
-    <%= f.text_area :text %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-
-<% end %>
+<div class="col-md-8 col-md-offset-2">
+  <%= form_for [@report, comment], remote: true do |f| %>
+    <div class="form-group">
+      <%= f.text_area :text, rows: 5, class: 'form-control', placeholder: 'Add a comment...' %>
+    </div>
+    <%= f.submit class: "btn btn-default" %>
+  <% end %>
+</div>
