--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-buffer">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <h1>Edit <%= truncate(@project.name, length: 40) %></h1>
