--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container container-buffer">
   <% if @report.release.project.owner == current_user && @report.accepted_by_project_owner == nil  %>
     <div class="row" id="acceptAlertBox">
       <div class="alert alert-info" role="alert">
@@ -16,22 +15,21 @@
     <div class="col-md-12">
       <div class="page-header">
         <%= link_to "Back to Release",
-            project_release_path(@release.project, @release) %>
+            project_release_path(@release.project, @release), class: "pull-right" %>
 
         <h2>
           Report #<%= @report.id %>
         </h2>
+        <p><%= truncate(@report.release.title, length: 100) %></p>
         <h4>
           <small>
-            <%= @report.release.project.name %> |
-            <%= @report.release.title %> |
-            Created on <%= @report.created_at.strftime('%B %d, %Y') %> |
-
+            <p>Created on <%= @report.created_at.strftime('%B %d, %Y') %></p>
             <% if @report.author == current_user %>
-              <%= link_to "Edit Report", [:edit, @release, @report] %> |
-              <%= link_to "Delete Report", [@release, @report], method: "delete" %>
+              <div>
+                <%= link_to "Edit Report", [:edit, @release, @report] %> |
+                <%= link_to "Delete Report", [@release, @report], method: "delete" %>
+              </div>
             <% end %>
-
           </small>
         </h4>
       </div>
@@ -39,15 +37,13 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <h4><strong>Report Content</strong></h4>
-      <hr/>
-      <p class="lead text-justify"><%= @report.content %></p>
+      <p class="text-justify"><%= @report.content %></p>
     </div>
   </div>
   <br>
   <div class="row">
     <div class="col-md-12">
-      <h4><strong>Images</strong></h4>
+      <h3>Images</h3>
       <hr/>
       <p>IMAGES TO BE ADDED</p>
     </div>
@@ -56,11 +52,10 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h4><strong>Discussion</strong></h4>
+      <h3>Discussion</h3>
       <hr/>
       <%= render "comments/form", comment: @comment %>
     </div>
   </div>
-
 </div>
 
