--- a/app/views/shared/_messages.html.erb
+++ b/app/views/shared/_messages.html.erb
@@ -1,7 +1,7 @@
 <% if flash.present? %>
   <div class="flash-container">
     <% flash.each do |name, msg| %>
-      <div class="alert <%= name == 'notice' ? 'alert-success' : 'alert-danger' %>">
+      <div class="text-center alert <%= name == 'notice' ? 'alert-success' : 'alert-danger' %>">
         <button type="button" class="close" data-dismiss="alert" >&times;</button>
         <%= msg%>
       </div>
