--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -7,7 +7,9 @@ body {
 }
 
 header {
-  background: #2B3E51;
+  background: transparent;
+  position: absolute;
+  width: 100%;
 }
 
 .container-buffer {
