--- a/app/assets/stylesheets/leaderboard.scss
+++ b/app/assets/stylesheets/leaderboard.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Leaderboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.leaderboard-time-interval {
+  display: inline-block;
+  font-size: 2em;
+}
