--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -1,19 +1,33 @@
+.main-header {
+  a {
+    color: #FFF;
+  }
+}
+
 .home-jumbotron {
-  background: image-url('home-jumbotron1.jpg') no-repeat;
+  background: image-url('ladybird_01.jpg') no-repeat;
   background-size: cover;
 
-  .info-box h1 {
+  @media screen and (min-width: 768px) {
+    padding: 150px 0;
+  }
+
+  .jumbo-content-for-guest h1,
+  .jumbo-content-for-user h1 {
     font-size: 2.9em;
     line-height: 1.2em;
     font-weight: bold;
     color: #FFF;
     text-shadow: 3px 3px 0 rgba(0,0,0,0.5);
     text-align: left;
-    max-width: 680px;
   }
 
-  @media screen and (min-width: 768px) {
-    padding: 120px 0;
+  .jumbo-content-for-guest h1 {
+    max-width: 100%;
+  }
+
+  .jumbo-content-for-user h1 {
+    text-align: center;
   }
 }
 
