Changing a release from open to closed is just an update
There's no reason to creates methods on the model and then an extra
action if you think about the resources. Closed or not for is just a
change of an atribute on the release resource. In cases like that, when
the change is simple I prefer to just go with the normal update action
of the resource.

In other situations where the change is more complex,
for example a CMS where multiple users could set the status of a blog post
to draft, reviewing, reviewed and published I would probably go with a
controller for the status, like PostStatus but when the change is simple
like in our case I think even an extra action is unecessary
complication.

In the previous commit I also introduced a bug with the filters, so this
commit is a refactoring of close the release and also a bug fix

--- a/app/views/releases/_open_release.html.erb
+++ b/app/views/releases/_open_release.html.erb
@@ -9,7 +9,15 @@
 
   <div class="col-md-4 text-center">
     <% if @project.owner == current_user %>
-    <p><%= link_to "Close Release", close_project_release_url(release.project, release) %></p>
+      <%= form_for [@project, release] do |f| %>
+        <%= f.hidden_field :open, value: false %>
+        <%= f.submit "Close Release",
+              class: "btn btn-default btn-xs",
+              data: {
+                confirm: "Once a release is closed for testing you can not open again. Are you sure you want to close it?"
+              } %>
+      <% end %>
     <% end %>
   </div>
 </div>
+
